--- a/web/styles/General.module.css
+++ b/web/styles/General.module.css
@@ -27,3 +27,21 @@
 .container {
     display: flex;
   }
+
+
+  .contextmenu {
+    font-size: 14px;
+    background-color: rgb(240, 0, 0);
+    border-radius: 2px;
+    padding: 5px 0 5px 0;
+    width: 150px;
+    height: auto;
+    margin: 0;
+  /* use absolute positioning  */
+    position: absolute;
+    list-style: none;
+    box-shadow: 0 0 20px 0 #ccc;
+    opacity: 1;
+    transition: opacity 0.5s linear;
+    z-index:1000
+  }
